Update source code

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -3,7 +3,7 @@
 
 db {
   default.driver = com.mysql.jdbc.Driver
-  default.url = "jdbc:mysql://localhost:8889/book_store"
+  default.url = "jdbc:mysql://localhost/book_store"
   default.user=root
   default.password="root"
 
